<resources>
    <string name="app_name">Based Share</string>
    <string name="back_image">Background Image</string>
    <string name="Welcome">Welcome to Based Share. The place where Gamers, Kinophiles and Musicophiles come together to share based ideas on their respective entertainment categories.</string>
    <string name="Continue">Click the button below for more</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ViewPager">Scroll Page</string>
    <string name="game">Games</string>
    <string name="gameDescription">Share the latest trends in gaming. Be it new Doom Eternal or Elden Ring Strategies to the latest optimistic PCMR builds and console hacks</string>
    <string name="movie">Movies</string>
    <string name="movieDescription">From Yojimbo to the Batman, From Clint Eastwood to Ryan Gosling. Share and rant about your Kino preference and also review tv shows on the go</string>
    <string name="music">Music</string>
    <string name="musicDescription">Be it a cinematic score by Ennio Morricone, a video Game Soundtrack by Mick Gordon or a track from a band whose name you keep forgetting, we have no limits. Share music to promote lesser known artists and get new preferences</string>
    <string name="register">Register</string>
    <string name="name">name...</string>
    <string name="Email">E-mail...</string>
    <string name="pass">Password...</string>
    <string name="confirm">Confirm Password</string>
    <string name="join">Join The Community</string>
    <string name="movieMenu">Movie</string>
    <string name="GameMenu">Game</string>
    <string name="musicMenu">Music</string>
    <string name="accountMenu">Account</string>
    <string name="search">search</string>
    <string name="movie_or_tv_show_name">movie or tv show</string>
    <string name="search_movies_shows">Search Movies/Shows</string>
    <string name="search_game">search game</string>
    <string name="searchg">Search</string>
    <string name="search_games">Search Games</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="search1">Search</string>
    <string name="view_saved">view Saved</string>
    <string name="movies_shows">Movies/Shows</string>
</resources>